# vinylkeeper

./: .gitignore  README.md
vinylkeeper_back/: .env.template.contributors  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  alembic.ini  diesel.toml  docker-compose.yml  errors_api_vk.log.2025-06-17  pyproject.toml  requirements.txt  setup.cfg
vinylkeeper_back/alembic/: env.py
vinylkeeper_back/alembic/versions/: 0001_create_all_enums.py  0a7866a822fe_updating_artist_and_wish_album_.py  124a321c3ab4_init_db.py  175c9fc3a15e_increase_description_length_to_500.py  285cf16f0989_add_collection_likes_association_table.py  29fb075ba718_add_indexes_for_stats_created_at.py  2b154890ae5c_updating_artist_again_model.py  38879e3f9289_add_public_collections_access_.py  418aad008764_updating_artist_and_wish_again2_model.py  420295606859_initial_clean_db_for_vinylkeeper.py  48aee46d80a2_remove_duplicate_indexes.py  4d97a2a634b2_update_collection_model_for_new_.py  539223c12a9e_add_collection_likes_association_table.py  54c1435eb740_add_missing_relationships_and_.py  6abadfbdb23d_fix_wishlist_relations.py  732383254a21_updating_artist_and_wish_album_.py  75d2f5f1cc7e_updating_artist_and_wish_again_model.py  7627823c1af6_add_owner_relation_for_collections_.py  7ba7696c9ee3_updating_artist_and_wish_agai5_model.py  82729f3d29b4_updating_artist_aghakin_model.py  82796b1fe092_move_owner_id_to_association_tables.py  8341b73c03ab_add_index_for_places_coordinates_exact_.py  8ffba0a1556d_add_composite_index_for_places_map.py  956b509a3bc0_init_v2_new_db_for_vinylkeeper.py  a2c3adeaeb3a_updating_models_for_features_places_in_.py  a2efc4e750d6_add_missing_album_relations_for_loans_.py  a8eb13d466fb_fix_pydantic_schemas_compatibility.py  add_timestamps_to_association_tables.py  b222fb2e3d98_add_indexes_external_source_id_mood_id.py  b475567323ec_add_cascade_and_indexes_moderation_requests.py  b6acf817fef8_add_unique_constraint_collection_name_.py  ba7721e09d0f_update_database_schema.py  becc11fa7f58_sync_models_with_db_after_index_cleanup.py  c40d6b791c84_add_performance_indexes.py  d3046d311edf_init_db.py  d5d162309ebc_updating_artist_and_wish_album_model.py  d83854623287_increase_password_field_length.py  de648ccdb1ff_move_album_instance_fields_to_.py  df6e13ac2ffd_initial_migration_with_all_models.py  e0afe09f40b7_updating_artist_enum_model.py  (+12 more)
vinylkeeper_back/api/: main.py
vinylkeeper_back/api/core/: dependencies_solid.py  security.py
vinylkeeper_back/api/db/: base.py
vinylkeeper_back/api/endpoints/: collections.py  external_references.py  request_proxy.py  users.py
vinylkeeper_back/api/mails/: client_mail.py
vinylkeeper_back/api/middleware/: auth_middleware.py  error_handler.py
vinylkeeper_back/api/models/: album_model.py  artist_model.py  collection_model.py  external_reference_model.py  genre_model.py  loan_model.py  role_model.py  user_model.py  wishlist_model.py
vinylkeeper_back/api/repositories/: collection_repository.py  external_reference_repository_solid.py  interfaces.py  music_metadata_repository_solid.py  user_repository.py  user_repository_solid.py
vinylkeeper_back/api/schemas/: collection_schemas.py  external_reference_schemas.py  user_schemas.py
vinylkeeper_back/api/services/: collection_service.py  encryption_service.py  external_reference_service.py  user_service.py  user_service_solid.py  validation_service.py
vinylkeeper_back/app/: .env.db.contributors  .env.template.contributors  main.py
vinylkeeper_back/app/core/: config.py  config_env.py  enums.py  exceptions.py  handlers.py  lifespan.py  logging.py  security.py  transaction.py
vinylkeeper_back/app/db/: base.py  init_db.py  init_references_data_db.py  init_role.py  models.py  session.py
vinylkeeper_back/app/endpoints/: admin.py  collections.py  dashboard.py  encryption.py  external_references.py  images.py  places.py  request_proxy.py  users.py
vinylkeeper_back/app/mails/: client_mail.py
vinylkeeper_back/app/mappers/: collection_mapper.py
vinylkeeper_back/app/middleware/: auth_middleware.py
vinylkeeper_back/app/models/: __init__.py  album_model.py  artist_model.py  association_tables.py  collection_album.py  collection_model.py  like_model.py  loan_model.py  moderation_request_model.py  place_like_model.py  place_model.py  role_model.py  user_model.py  wishlist_model.py
vinylkeeper_back/app/repositories/: album_repository.py  artist_repository.py  collection_album_repository.py  collection_repository.py  dashboard_repository.py  external_reference_repository.py  like_repository.py  moderation_request_repository.py  place_repository.py  search_repository.py  user_repository.py  wishlist_repository.py
vinylkeeper_back/app/schemas/: __init__.py  album_schema.py  artist_schema.py  authentication_schemas.py  collection_album_schema.py  collection_schema.py  common.py  dashboard_schema.py  external_reference_schema.py  like_schema.py  like_schemas.py  loan_schema.py  moderation_request_schema.py  place_like_schema.py  place_schema.py  place_shema.py  role_schema.py  token.py  user.py  user_schema.py  user_schemas.py  wishlist_schema.py
vinylkeeper_back/app/services/: collection_service.py  dashboard_service.py  encryption_service.py  export_service.py  external_reference_service.py  image_proxy_service.py  moderation_service.py  place_service.py  search_service.py  user_service.py  wishlist_export_service.py  wishlist_service.py
vinylkeeper_back/app/utils/: endpoint_utils.py  geocoding.py  http_client.py  utils.py  utils_jwt.py  utils_password.py  validation_utils.py  vinyl_state_mapping.py
vinylkeeper_back/migrations/2024-10-19-080554_create_collections/: up.sql
vinylkeeper_back/migrations/2024-10-19-080741_create_genres/: up.sql
vinylkeeper_back/migrations/2024-10-19-080908_create_loans/: up.sql
vinylkeeper_back/migrations/2024-10-19-081002_create_ratings/: up.sql
vinylkeeper_back/src/: main.rs  schema.rs
vinylkeeper_back/tests/: conftest.py
vinylkeeper_back/vinylkeeper_back/: main.py
vinylkeeper_back_v2/: Cargo.toml
vinylkeeper_back_v2/src/: app_state.rs
(+490 files in other folders)
