[package]
name = "vinylkeeper_back"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "^0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
dotenvy = "0.15"
rocket_cors = "0.6" 
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["password-hash"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }

[features]
default = ["dev"]
dev = []
prod = []
