[package]
name = "vinylkeeper_back"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json","secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["postgres", "chrono","uuid"] }
diesel-async = { version = "0.5.1", features = ["postgres", "bb8"] }
dotenvy = "0.15"
rocket_cors = "0.6" 
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["password-hash"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.66"
tokio = { version = "1.41", features = ["full"] }
lettre = "0.11.10"
uuid = { version = "1", features = ["v4","serde"] }
once_cell = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
[features]
default = ["dev"]
dev = []
prod = []
