[tool.poetry]
name = "vinylkeeper-back"
version = "0.1.0"
description = "VinylKeeper Backend API with FastAPI"
authors = ["kent1 <genetquentin@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
argon2-cffi = "^23.1.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"
requests = "^2.32.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
