[tool.poetry]
name = "vinylkeeper-back"
version = "1.0.0"
description = "VinylKeeper Backend API with FastAPI"
authors = ["kent1 <genetquentin@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
pydantic = "^2.10.6"
argon2-cffi = "^25.1.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
email-validator = "^2.2.0"
requests = "^2.32.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.3.0"
httpx = "^0.28.1"
aiohttp = "^3.12.13"
uvloop = "^0.21.0"
httptools = "^0.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.0.0"
mypy = "^1.13.0"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
