[package]
name = "vinylkeeper_back_v2"
description = "VinylKeeper Backend API with Axum (Rust) and SeaORM"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = { version = "0.8.7", features = ["macros", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.2.0"
lettre = { version = "0.11.19", features = ["builder", "serde", "tokio1-rustls-tls"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

